@@ -3,7 +3,8 @@
  * updated pmkpc(1) to sync with actual state.
  * added support for multiple sources in pmkinstall.
  * added support for case when destination is a directory.
- * removed superfluous path creation stuff (not compatible with install).
+ * fixed str_to_ulong() to use an unsigned long like said by the name.
+ * replaced use of strtoul() by str_to_ulong().
 
 07 Feb 2004 mipsator
  * fixed building of the pmkscan location in usermode.
